Thu Nov  2 01:58:03 2000  Christopher Faylor <cgf@cygnus.com>

	* ntdll.h: Remove IO_COUNTERS definition since it is now in winnt.h.

Thu Nov  2 00:10:23 2000  Christopher Faylor <cgf@cygnus.com>

	* pinfo.cc (EnumProcessesNT): New function.  Eliminates dependence on
	psapi.h.
	(EnumProcesses9x): Rename from EnumProcessesW95.  Change arguments to
	be more useful for cygwin.
	(winpids::init): Accomodate argument changes.
	(enum_init): Ditto.
	* pinfo.h (winpids): Make pidlist dynamically extendable by storing it
	as a pointer and remembering the size.
	* ntdll.h: Add extra definitions needed for EnumProcessesNT.  Reformat
	via 'indent'.

Wed Nov  1 21:08:23 2000  Christopher Faylor <cgf@cygnus.com>

	* exceptions.cc (interruptible): Remove obsolete tests.
	(sigreturn): Construct pseudo-frame-pointer so that signal handler can
	figure out where to put return address when signals are coming in
	quickly.
	* path.cc (cwdstuff::get): Allow length 0 buffer length when buffer
	when NULL.

Tue Oct 31 18:12:56 2000  Christopher Faylor <cgf@cygnus.com>

	* path.h (has_exec_chars): Standard function for checking for
	executable magic numbers.
	* path.cc (symlink_info::check): Use the above function.
	* fhandler.cc (fhandler_disk_file::open): Ditto.

Tue Oct 31 17:57:52 2000  Christopher Faylor <cgf@cygnus.com>

	* path.cc (_readlink): Return ENOENT when file does not exist.

Tue Oct 31 23:35:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* fhandler.h (fhandler_dev_raw): Add method `fixup_after_exec'.

Tue Oct 31 22:39:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* fhandler.h (fhandler_dev_raw): Add definition for method
	`fixup_after_fork'.
	* fhandler_raw.cc (fhandler_dev_raw::fhandler_dev_raw): Add
	`set_need_fixup_after_fork' call.
	(fhandler_dev_raw::~fhandler_dev_raw): Revert to user space
	allocation.
	(fhandler_dev_raw::open): Ditto.
	(fhandler_dev_raw::dup): Ditto. Reset buffer pointer.
	(fhandler_dev_raw::fixup_after_fork): New function.